4a and 4b are done

--- a/Miranda_Brando_9520_fall2014_pset2.tex
+++ b/Miranda_Brando_9520_fall2014_pset2.tex
@@ -119,7 +119,57 @@ $$Pr[ \sup\limits_{f \in \mathcal{H}}  | I_s[f] - I[f] | \geq \epsilon|] \leq \s
 
 Yielding the desired upper bound.
 \end{proof}
+%%%
 
+b)
+
+%%%
+
+\begin{proof}
+Let $f_s = argmin_{f \in \mathcal{H}} I_s[f]$, i.e. the minimizer of the empirical risk. Then obviously the defect wrt to this the minimizer of the empirical risk is upper bounded by the probability from the previous part of the question, i.e.
+
+$$Pr[| I_S[f_s] - I[f_s] | \geq \epsilon|]= Pr[ \sup\limits_{f \in \mathcal{H}}  | I_s[f] - I[f] | \geq \epsilon|] \leq \sum^{N}_{i=1} Pr[| I_s[f_i] - I[f_i] | \geq \epsilon|] \leq \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2}$$
+
+
+The difference between generalization and empirical error is either above epsilon or bellow it with probability 1. Therefore:
+
+$$1 - Pr[| I_S[f_s] - I[f_s] | \leq \epsilon|] = Pr[| I_S[f_s] - I[f_s] | \geq \epsilon|] $$
+
+So we have after some algebra we have:
+
+$$Pr[| I_S[f_s] - I[f_s] | \leq \epsilon |] \geq 1- \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2} $$
+
+If we want to have at least $1 - \eta$ confidence that the empirical error will be $\epsilon-$close to the generalization error the equation bellow must hold:
+
+$$Pr[| I_S[f_s] - I[f_s] | \leq \epsilon |] \geq 1- \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2} \geq 1- \eta$$
+
+Therefore, the closeness of empirical and generalization error holds (i.e. the above inequality holds) holds if the following holds:
+
+$$1- \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2} \geq 1- \eta$$
+
+Which after some algebra implies:
+
+$$\epsilon \geq \sqrt{\frac{N(c^2-2cM+M^2)^2}{n \epsilon^2}}$$
+
+Meaning that if we want $1 - \eta$ confidence, then the smallest error bound we can bound with probability, is $\sqrt{\frac{N(c^2-2cM+M^2)^2}{n \epsilon^2}}$
+
+Therefore, that means that the difference between the true generalization error and the empirical risk is at most $\sqrt{\frac{N(c^2-2cM+M^2)^2}{n \epsilon^2}}$ with $1 -\eta$ confidence:
+
+$$| I_S[f_s] - I[f_s] | \leq \epsilon | \geq \epsilon = \epsilon(n, \eta, N) =  \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2} $$
+
+With the the absolute value function we have $I_s[f_s] - I[f_s] \leq e(n, \eta, N)$ and $I[f_s] - I_s[f_s] \leq e(n, \eta, N) $ are true. Since we are interested in bounding the generalization error we will be interested in the second inequality (the first one is true but useless because it bounds the empirical error in terms of the generalization error. We don't need to bound the empirical error because we can compute it directly!) Thus:
+
+$$I[f_s] - I_s[f_s] \leq \epsilon(n, \eta, N) $$
+
+$$I[f_s] \leq I_s[f_s] + \epsilon(n, \eta, N) =  I_s[f_s] + \frac{N(c^2-2cM+M^2)^2}{n \epsilon^2}$$
+
+\end{proof}
+
+As $N = |\mathcal{H}|$ increases, then that means the we are increasing the space of functions we are allowing ourselves to choose from. Since we are adding more functions to choose from without removing previous functions we already had in $\mathcal{H}$, the empirical risk cannot increase. If this is true, then the empirical risk can only decrease. This means that $I_S[f_S]$ can only decrease as $N$ increases. So we might get a lower empirical risk. 
+
+However, as N increases, $\epsilon(n, \eta, N)$ increases linearly. Meaning that our difference between empirical and generalization error becomes more lose, in the sense that the upper bound increases. This is not good because if N becomes very large, then the event that we are trying to impose a probability, will become less and less interesting. To illustrate my argument, take as an extreme case, if $\epsilon(n, \eta, N) = \infty$, then we are trying to impose an upper bound on the probability that the empirical risk is really far from the generalization. However, if we allow the difference to be infinity, then it becomes an uninteresting probabilistic event, even if we know the probability exactly. i.e. we know for sure that their difference will be less than infinity if both are finite real numbers.
+
+Now lets explore the sum of them $I_S[f_S] + \epsilon(n, \eta, N)$. As N increases $I_S[f_S]$ can only decrease and $\epsilon(n, \eta, N)$ increases linearly for sure. However, $I_S[f_S]$ doesn't necessarily have to decrease for every unit of N that we increase, while $\epsilon(n, \eta, N)$ for sure increases linearly for every unit of N. This makes overfitting more likely. As N increases $I_S[f_S]$ \textbf{might} decrease, however, we know for sure that $\epsilon(n, \eta, N)$ increases. This gives us an upper bound on $I[f_S]$ (generalization error) that increases most of the times as $N$ increases. This means that our upper bound estimate for the generalization error becomes more and more useless and that the empirical error becomes less good as a proxy for $I[f_S]$. Thus, yielding overfitting more and more likely.
 
 %%%
 \paragraph{Problem 5 (MATLAB)}
